# eduforge

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  TEST.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
config/: pipeline.review-loop.yaml  pipeline.skeleton.yaml
docs/architecture/: 01-input-specification.md  02-agent-input-flow.md  03-implementation-plan.md  04-conceptual-guide.md  04-langgraph-agentic-design.md  05-implementation-design.md  06-implementation-plan.md  07-agentic-pipeline-status.md
eduforge/: __init__.py  agent.py  artifacts.py  cli.py  config.py  executor.py  ledger.py  llm.py  orchestrator.py  report.py
examples/profiles/: ml-engineer-apple-silicon.md  web-dev-beginner.md
forged/: __init__.py  agent.py  assessment.py  cli.py  executor.py  ledger.py  llm.py  logging_config.py  models.py  notebook.py  orchestrator.py  prompts.py
forged/pipeline/: __init__.py  failure.py  graph.py  router.py  state.py
forged/pipeline/agents/: __init__.py  (+5 more)
personas/: code_author.md  planner.md  reviser.md  student.md
profiles/: default.md
templates/: README.md  assessment_approach.template.yaml  learner_profile.template.yaml  topic_specification.template.yaml
templates/examples/: learner-backend-junior.yaml  learner-beginner.yaml  learner-ml-practitioner.yaml  topic-hash-maps.yaml  topic-transformers.yaml
tests/: conftest.py  test_cli_agentic.py  test_pipeline.py
tests/pipeline/: __init__.py  test_agents.py  test_agents_concrete.py  test_agents_llm.py  test_failure.py  test_graph_integration.py  test_router.py  test_state.py
